--- a/src/screens/PatternScreen.css
+++ b/src/screens/PatternScreen.css
@@ -28,6 +28,15 @@
   display: flex;
   justify-content: center;
 }
+.pattern_image {
+  width: 100%;
+  transition: transform 0.3s ease;
+}
+
+.pattern_image:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
 
 
 
