--- a/src/screens/ProductScreen.css
+++ b/src/screens/ProductScreen.css
@@ -28,3 +28,12 @@
   display: flex;
   justify-content: center;
 }
+.product_image {
+  width: 100%;
+  transition: transform 0.3s ease;
+}
+
+.product_image:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
